--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="index.css" />
 		<div class="test"></div> /*background
 		<video autoplay muted loop id="myVideo">
-			<source src="stars.mp4" type="video/mp4">
+			<source src=".mp4" type="video/mp4">
 		</video>
 	
 		
