--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
 		<title>Donna's blog</title>
 		<link rel="stylesheet" href="index.css" />
 		<div class="test"></div> /*background
-		<video autoplay muted loop id="myVideo">
-			<source src=".mp4" type="video/mp4">
-		</video>
-	
+		@media only screen and (max-width: 600px){
+		.test }
 		
 
 			<p><b><a class="one" href="index.html" target="_self">Home</a></b></p>
