--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name=" description" content="life from a student's perspective" />
 		<title>Donna's blog</title>
 		<link rel="stylesheet" href="index.css" />
-		<div class="test"></div> /*background*/
+		<div class="test"></div> 
 		
 
 			<p><b><a class="one" href="index.html" target="_self">Home</a></b></p>
