--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 		
 
 			<p><b><a class="one" href="index.html" target="_self">Home</a></b></p>
-			<p><b><a class= "two" href="projects.html" target="_self">Projects</a></b></p>
-			<p><b><a class= "three" href= "about.html" target= "_self">Experience</a></b></p>
+			<p><b><a class= "two" href="index.html" target="_self">Projects</a></b></p>
+			<p><b><a class= "three" href= "index.html" target= "_self">Experience</a></b></p>
 			<p><b><a class= "four" href= "https://www.linkedin.com/in/donna-reymatias-0a6263291" target="_blank">in</a></b></p>
 			<p><b><a class= "five" href= "https://www.facebook.com/donnareymatias/" target="_blank">f</a></b></p>
 			<p><b><a class= "six" href= "https://github.com/drchl" target="_blank">github</a></b></p>
