--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		
 
 			<p><b><a class="one" href="index.html" target="_self">Home</a></b></p>
+			
 			<p><b><a class= "two" href="index.html" target="_self">Projects</a></b></p>
 			<p><b><a class= "three" href= "index.html" target= "_self">Experience</a></b></p>
 			<p><b><a class= "four" href= "https://www.linkedin.com/in/donna-reymatias-0a6263291" target="_blank">in</a></b></p>
@@ -20,8 +21,9 @@
 			
 	</head>
 	<body>
-		
+	<section id= "Projects">
 	<h1>Hi, I'm </h1>
+	</section>
 	<h2> Donna </h2>
 
 	<p1>       I am a 
