--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
 		<title>Donna's blog</title>
 		<link rel="stylesheet" href="index.css" />
 		<div class="test"></div> 
-		
+		<a href="#home">Jump to home</a>
 
 			<p><b><a class="one" href="index.html" target="_self">Home</a></b></p>
-			
 			<p><b><a class= "two" href="index.html" target="_self">Projects</a></b></p>
 			<p><b><a class= "three" href= "index.html" target= "_self">Experience</a></b></p>
 			<p><b><a class= "four" href= "https://www.linkedin.com/in/donna-reymatias-0a6263291" target="_blank">in</a></b></p>
@@ -21,9 +20,9 @@
 			
 	</head>
 	<body>
-	<section id= "Projects">
-	<h1>Hi, I'm </h1>
-	</section>
+	
+	<h1 id="home">Hi, I'm </h1>
+	
 	<h2> Donna </h2>
 
 	<p1>       I am a 
