--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 		<title>Donna's blog</title>
 		<link rel="stylesheet" href="index.css" />
 		<div class="test"></div> 
-		<a href="#home">Jump to home</a>
+		<a href="#home">Home</a>
 
-			<p><b><a class="one" href="index.html" target="_self">Home</a></b></p>
 			<p><b><a class= "two" href="index.html" target="_self">Projects</a></b></p>
 			<p><b><a class= "three" href= "index.html" target= "_self">Experience</a></b></p>
 			<p><b><a class= "four" href= "https://www.linkedin.com/in/donna-reymatias-0a6263291" target="_blank">in</a></b></p>
